Verif/Test/Invalide/test_erreur_3.59-2.deca
// Description:
//    Programme soulevant l'erreur (3.59)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Conversion de 'type_null' en 'int' impossible (règle 3.59)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

int i;
{
   i = cast<int> (null);
}